Radicale/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radicale
  namespace: radicale
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radicale
  template:
    metadata:
      labels:
        app: radicale
    spec:
      securityContext:
        runAsUser: 2999
        runAsGroup: 2999
        fsGroup: 2999
      containers:
        - name: radicale
          image: tomsquest/docker-radicale:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5232
          volumeMounts:
            - name: config
              mountPath: /config/config
              subPath: config
            - name: users
              mountPath: /config/users
              subPath: users
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 128Mi
      volumes:
        - name: config
          configMap:
            name: radicale-config
        - name: users
          secret:
            secretName: radicale-secret
        - name: data
          persistentVolumeClaim:
            claimName: radicale-data
