Radicale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radicale
  namespace: radicale
spec:
  selector:
    app: radicale
  ports:
    - port: 5232
      targetPort: http
